# slimventory

./: .env.example  .gitignore  .semgrepignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.public.yml  docker-compose.release.yml  docker-compose.traefik.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_first_official_release_baseline.py
backend/app/: audit.py  config.py  crud.py  database.py  deps.py  main.py  rate_limit.py  security.py
backend/app/models/: __init__.py  ai.py  ansible.py  auth.py  backup.py  git.py  inventory.py  job_templates.py  monitoring.py
backend/app/routers/: __init__.py  _factory.py  admin.py  ai.py  ansible_defaults.py  ansible_playbooks.py  app_fields.py  apps.py  auth.py  backup.py  datastores.py  domains.py  environments.py  git_credentials.py  git_repos.py  global_default_roles.py  host_ansible_vars.py  host_app_fields.py  host_apps.py  host_host_type_fields.py  host_resources.py  host_role_fields.py  host_status_fields.py  host_statuses.py  host_storage.py  host_type_fields.py  host_type_roles.py  host_types.py  hosts.py  inventory.py  job_templates.py  k3s_cluster_apps.py  k3s_clusters.py  monitoring.py  playbook_runs.py  proxmox.py  role_fields.py  role_matrix.py  roles.py  (+4 more)
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_crud.py  test_field_encryption.py  test_monitoring.py  test_playbook_runs.py  test_proxmox.py  test_proxmox_sync_tags.py  test_role_matrix.py  test_unifi.py
(+134 files in other folders)
