[project]
name = "slim-backend"
version = "1.0.0"
description = "SLIM — Simple Lab Inventory Manager backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pymysql>=1.1.1",
    "cryptography>=46.0.7",
    "passlib[bcrypt,argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.26",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"app/schemas/__init__.py" = ["F401"]
"app/models/__init__.py" = ["F401"]
"app/routers/__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "alembic"]
